# oai_kpa_stm

./: .gitignore  CHANGELOG.md  README.md  create_py_from.bat  oai_kpa_stm.py  oai_kpa_stm_widget.py  oai_kpa_stm_widget.ui  oai_kpa_stm_widget_qt.py  oia_kpa_stm_data.py  pyproject.toml
.github/workflows/: main.yaml
cfg/: oai_kpa_stm.json
oai_kpa_stm/: __init__.py  __main__.py  create_py_from_ui.bat  oai_kpa_stm.py  oai_kpa_stm_widget_qt.py  oai_kpa_stm_widget_qt.ui  oia_kpa_stm_data.py
oai_kpa_stm/cfg/: oai_kpa_stm.json
oai_kpa_stm/log/2021_01_15 oai_kpa_stm/: 2021_01_15 18-45-39 oai_kpa_stm .csv
oai_kpa_stm/log/2021_01_16 oai_kpa_stm/: 2021_01_16 12-10-44 oai_kpa_stm .csv  2021_01_16 12-11-01 oai_kpa_stm .csv  2021_01_16 12-23-40 oai_kpa_stm .csv  2021_01_16 12-24-48 oai_kpa_stm .csv  2021_01_16 16-13-46 oai_kpa_stm .csv  2021_01_16 17-38-00 oai_kpa_stm .csv  2021_01_16 17-39-30 oai_kpa_stm .csv  2021_01_16 17-40-17 oai_kpa_stm .csv  2021_01_16 17-41-14 oai_kpa_stm .csv  2021_01_16 17-43-17 oai_kpa_stm .csv
tests/: test_oai_kpa_stm.py
