[tool.poetry]
name = "oai_kpa_stm"
version = "0.1.0"
description = "engineer window for oai_kpa_stm module"
authors = ["a-styuf <a-styuf@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
